[package]
name = "flurl"
version = "0.6.1"
authors = ["Andrey <amigin@gmail.com>"]
edition = "2021"

[features]
default = []
with-ssh = ["my-ssh"]
unix-socket = []
debug-request = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }

my-tls = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-tls.git" }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }

hyper-util = { version = "*", features = ["tokio"] }

http-body-util = { version = "*" }

my-http-client = { tag = "0.1.2", git = "https://github.com/MyJetTools/my-http-client.git" }

lazy_static = "*"
async-trait = "*"
bytes = "*"

url-utils = { tag = "0.1.4", git = "https://github.com/MyJetTools/url-utils.git" }

serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
openssl = { version = "*" }

my-ssh = { tag = "0.1.2", git = "https://github.com/MyJetTools/my-ssh.git", optional = true }

webpki-roots = "*"
webpki = "*"
pem = "*"
