[package]
name = "flurl"
version = "0.6.1"
authors = ["Andrey <amigin@gmail.com>"]
edition = "2021"

[features]
default = ["with-ssh"]
with-ssh = ["dep:my-ssh"]
# Enables accept_invalid_certificate(). Dangerous: disables TLS server-cert
# verification. Off by default; without it accept_invalid_certificate() errors at
# connect time instead of silently downgrading security.
dangerous-tls = ["my-tls/dangerous-tls"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }

hyper-util = { version = "*", features = ["tokio"] }

http-body-util = { version = "*" }

my-http-client = { tag = "0.1.2", git = "https://github.com/MyJetTools/my-http-client.git" }

lazy_static = "*"
async-trait = "*"
bytes = "*"

url-utils = { tag = "0.1.4", git = "https://github.com/MyJetTools/url-utils.git" }

serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }

flate2 = "*"
http = "*"
my-hyper-utils = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-hyper-utils.git" }
rand = "*"
parking_lot = "*"
ahash = "*"
my-tls = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-tls.git" }

[target.'cfg(unix)'.dependencies]
my-ssh = { tag = "0.1.2", git = "https://github.com/MyJetTools/my-ssh.git", optional = true }
